--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "Selitskiy"
+name = "XORann_Selitskiy"
 version = "0.0.1"
 authors = [
   { name="Stanislav Selitskiy", email="selitsky@yahoo.com" },
